--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,7 @@
   font-family: 'Open Sans';
   background-color: #F5F5F5;
 }
+
+body {
+  margin: 0px;
+}
